--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,3 +3,23 @@
     margin: 0;
     padding: 0;
 }
+
+:root {
+    font-size: 16px;
+
+    --bg-main: #262626;
+    --text-color: #ffffff;
+    --author-color: #e9aa89;
+}
+
+body {
+    background-color: var(--bg-main);
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+}
+
+nav {
+    height: 100vh;
+    width: 100vw;
+    background-color: #000;
+}
