--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,16 +10,112 @@
     --bg-main: #262626;
     --text-color: #ffffff;
     --author-color: #e9aa89;
+    --tag-color: #CACACA;
 }
 
 body {
     background-color: var(--bg-main);
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
+
 }
 
 nav {
+    left: 0;
+    top: 0;
+    position: absolute;
+    z-index: 1;
     height: 100vh;
     width: 100vw;
-    background-color: #000;
+    background-color: var(--bg-main);
+    transform: translateX(100%);
+    display: none;
+
+}
+
+nav .open {
+    transform: translateX(0%);
+}
+
+nav ul {
+    list-style-type: none;
+    padding-top: 10rem;
+    line-height: 5rem;
+}
+
+nav ul li a {
+    color: var(--text-color);
+    text-decoration: none;
+
+    font-size: 2.625rem;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    padding-top: 2rem;
+    font-size: 1.5rem;
+}
+
+.contact>a {
+    text-decoration: none;
+    color: var(--text-color);
+    line-height: 2.5rem;
+}
+
+.toggle-menu {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    border: 1px solid #ffffff;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    z-index: 2;
+
+}
+
+
+.portfolio {
+    padding-top: 6rem;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.portfolio__overview {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+}
+
+.portfolio__tag {
+    font-size: 0.875rem;
+    color: var(--tag-color);
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.portfolio__title {
+    font-size: 2rem;
+    font-weight: 700;
+    color: var(--text-color);
+}
+
+.portfolio__description {
+    font-size: 1rem;
+    color: var(--text-color);
+    line-height: 1.85rem;
+}
+
+.portfolio__images {
+    display: grid;
+    margin-top: 2rem;
+    gap: 0.75rem;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+}
+
+.portfolio__image img {
+    max-width: 100%;
+    height: auto;
 }
