--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,7 +6,6 @@
 
 :root {
     font-size: 16px;
-
     --bg-main: #262626;
     --text-color: #ffffff;
     --author-color: #e9aa89;
@@ -17,105 +16,156 @@ body {
     background-color: var(--bg-main);
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-
 }
 
-nav {
-    left: 0;
-    top: 0;
+.wrapper {
+    overflow: hidden;
     position: absolute;
-    z-index: 1;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
-    background-color: var(--bg-main);
-    transform: translateX(100%);
-    display: none;
-
+    top: 0;
+    left: 0;
 }
 
-nav .open {
-    transform: translateX(0%);
-}
-
-nav ul {
-    list-style-type: none;
-    padding-top: 10rem;
-    line-height: 5rem;
-}
-
-nav ul li a {
-    color: var(--text-color);
-    text-decoration: none;
-
-    font-size: 2.625rem;
-}
-
-.contact {
-    display: flex;
-    flex-direction: column;
-    padding-top: 2rem;
-    font-size: 1.5rem;
-}
-
-.contact>a {
-    text-decoration: none;
-    color: var(--text-color);
-    line-height: 2.5rem;
-}
-
-.toggle-menu {
-    width: 3rem;
-    height: 3rem;
+.nav-button {
+    padding: 1.5rem;
+    border: 1px solid #fff;
     border-radius: 50%;
-    border: 1px solid #ffffff;
     position: absolute;
     top: 1rem;
     right: 1rem;
+    cursor: pointer;
     z-index: 2;
 
 }
 
+.nav-button::before,
+.nav-button::after {
+    transition: transform 300ms ease-in-out, top 300ms ease-in-out;
+    ;
+    content: "";
+    position: absolute;
+    height: 1px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 1.75rem;
+    background-color: #fff;
+}
 
-.portfolio {
-    padding-top: 6rem;
+.nav-button::before {
+    top: 40%;
+}
+
+
+.nav-button::after {
+    top: 60%;
+}
+
+.menu-button-active::before,
+.menu-button-active::after {
+    top: 50%;
+    transform-origin: center;
+}
+
+.menu-button-active::before {
+    transform: translateX(-50%) rotate(45deg);
+}
+
+.menu-button-active::after {
+    transform: translateX(-50%) rotate(-45deg);
+}
+
+.nav-container {
+    width: inherit;
+    height: inherit;
+    background-color: var(--bg-main);
+    transform: translateX(100%);
+    transition: transform 300ms ease-in-out;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.menu-open {
+    transform: translateX(0%);
+}
+
+nav {
+    margin-top: 8rem;
+    margin-bottom: 3rem;
+}
+
+nav ul {
+    list-style-type: none;
+    line-height: 5rem;
+}
+
+nav ul li a {
+    text-decoration: none;
+    font-size: 2.625rem;
+    color: var(--text-color);
+}
+
+.contact {
+    line-height: 2.5rem;
+}
+
+.contact-item {
+    font-size: 1.5rem;
+    color: var(--text-color);
+}
+
+.banner {
+    background-image: url('/assets/images/bg-2.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+    background-repeat: no-repeat;
+}
+
+.overview {
+    margin: 2.5rem 0;
+    color: var(--text-color);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.overview .tag {
+    text-transform: uppercase;
+    color: var(--tag-color);
+    font-weight: 700;
+    font-size: 0.75rem;
+}
+
+.overview .author {
+    color: var(--author-color);
+}
+
+.overview .title {
+    font-weight: 700;
+    line-height: 2.5rem;
+    font-size: 2rem;
+}
+
+.overview .description {
+    line-height: 1.75rem;
+}
+
+.container {
     width: 90%;
     margin: 0 auto;
 }
 
-.portfolio__overview {
-    display: flex;
-    flex-direction: column;
-    gap: 0.75rem;
-}
-
-.portfolio__tag {
-    font-size: 0.875rem;
-    color: var(--tag-color);
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-.portfolio__title {
-    font-size: 2rem;
-    font-weight: 700;
-    color: var(--text-color);
-}
-
-.portfolio__description {
-    font-size: 1rem;
-    color: var(--text-color);
-    line-height: 1.85rem;
-}
-
-.portfolio__images {
+.portfolio {
     display: grid;
-    margin-top: 2rem;
-    gap: 0.75rem;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 1rem;
 }
 
-.portfolio__image img {
-    max-width: 100%;
-    height: auto;
+.portfolio-img img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
