--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,171 +1,194 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
-    font-size: 16px;
-    --bg-main: #262626;
-    --text-color: #ffffff;
-    --author-color: #e9aa89;
-    --tag-color: #CACACA;
+  font-size: 16px;
+  --bg-main: #262626;
+  --text-color: #ffffff;
+  --author-color: #e9aa89;
+  --tag-color: #cacaca;
 }
 
 body {
-    background-color: var(--bg-main);
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
+  background-color: var(--bg-main);
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
 }
 
 .wrapper {
-    overflow: hidden;
-    position: absolute;
-    height: 100%;
-    width: 100vw;
-    top: 0;
-    left: 0;
+  overflow: hidden;
+  position: absolute;
+  height: 100%;
+  width: 100vw;
+  top: 0;
+  left: 0;
 }
 
 .nav-button {
-    padding: 1.5rem;
-    border: 1px solid #fff;
-    border-radius: 50%;
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    cursor: pointer;
-    z-index: 2;
-
+  padding: 1.5rem;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
+  z-index: 2;
 }
 
 .nav-button::before,
 .nav-button::after {
-    transition: transform 300ms ease-in-out, top 300ms ease-in-out;
-    ;
-    content: "";
-    position: absolute;
-    height: 1px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 1.75rem;
-    background-color: #fff;
+  transition: transform 300ms ease-in-out, top 300ms ease-in-out;
+  content: "";
+  position: absolute;
+  height: 1px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 1.75rem;
+  background-color: #fff;
 }
 
 .nav-button::before {
-    top: 40%;
+  top: 40%;
 }
 
-
 .nav-button::after {
-    top: 60%;
+  top: 60%;
 }
 
 .menu-button-active::before,
 .menu-button-active::after {
-    top: 50%;
-    transform-origin: center;
+  top: 50%;
+  transform-origin: center;
 }
 
 .menu-button-active::before {
-    transform: translateX(-50%) rotate(45deg);
+  transform: translateX(-50%) rotate(45deg);
 }
 
 .menu-button-active::after {
-    transform: translateX(-50%) rotate(-45deg);
+  transform: translateX(-50%) rotate(-45deg);
 }
 
 .nav-container {
-    width: inherit;
-    height: inherit;
-    background-color: var(--bg-main);
-    transform: translateX(100%);
-    transition: transform 300ms ease-in-out;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
+  width: inherit;
+  height: inherit;
+  background-color: var(--bg-main);
+  transform: translateX(100%);
+  transition: transform 300ms ease-in-out;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .menu-open {
-    transform: translateX(0%);
+  transform: translateX(0%);
 }
 
 nav {
-    margin-top: 8rem;
-    margin-bottom: 3rem;
+  margin-top: 8rem;
+  margin-bottom: 3rem;
 }
 
 nav ul {
-    list-style-type: none;
-    line-height: 5rem;
+  list-style-type: none;
+  line-height: 5rem;
 }
 
 nav ul li a {
-    text-decoration: none;
-    font-size: 2.625rem;
-    color: var(--text-color);
+  text-decoration: none;
+  font-size: 2.625rem;
+  color: var(--text-color);
 }
 
 .contact {
-    line-height: 2.5rem;
+  line-height: 2.5rem;
 }
 
 .contact-item {
-    font-size: 1.5rem;
-    color: var(--text-color);
+  font-size: 1.5rem;
+  color: var(--text-color);
 }
 
 .banner {
-    background-image: url('/assets/images/bg-2.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 400px;
-    background-repeat: no-repeat;
+  background-image: url("/assets/images/bg-2.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 400px;
+  background-repeat: no-repeat;
 }
 
 .overview {
-    margin: 2.5rem 0;
-    color: var(--text-color);
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  margin: 2.5rem 0;
+  color: var(--text-color);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .overview .tag {
-    text-transform: uppercase;
-    color: var(--tag-color);
-    font-weight: 700;
-    font-size: 0.75rem;
+  text-transform: uppercase;
+  color: var(--tag-color);
+  font-weight: 700;
+  font-size: 0.75rem;
 }
 
 .overview .author {
-    color: var(--author-color);
+  color: var(--author-color);
 }
 
 .overview .title {
-    font-weight: 700;
-    line-height: 2.5rem;
-    font-size: 2rem;
+  font-weight: 700;
+  line-height: 2.5rem;
+  font-size: 2rem;
 }
 
 .overview .description {
-    line-height: 1.75rem;
+  line-height: 1.75rem;
 }
 
 .container {
-    width: 90%;
-    margin: 0 auto;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .portfolio {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 1rem;
 }
 
 .portfolio-img img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+@media screen and (prefers-color-scheme: light) {
+  :root {
+    --bg-main: #fff;
+    --text-color: #000;
+    --tag-color: #858282;
+  }
+}
+
+@media screen and (prefers-color-scheme: light) {
+  .nav-button {
+    border: 1px solid #000;
+    background-color: #000;
+  }
+  .nav-button::before,
+  .nav-button::after {
+    background-color: #fff;
+  }
+}
+
+@media (min-width: 1024px) {
+  .portfolio {
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    gap: 1.5rem;
+  }
 }
