--- a/assets/styles.css
+++ b/assets/styles.css
@@ -123,7 +123,7 @@ nav ul li a {
 }
 
 .banner {
-    background-image: url("/assets/images/bg-2.jpg");
+    background-image: url("/assets/images/ahmet-yuksek-MuB8snLj2xQ-unsplash.jpg");
     background-size: cover;
     background-position: center;
     height: 400px;
@@ -245,7 +245,7 @@ nav ul li a {
 
 
     .work-container {
-        background: rgba(255, 255, 255, 0.85);
+        background: rgba(255, 255, 255, 1);
 
     }
 
